--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -10,6 +10,8 @@
   --color-foreground: var(--foreground);
   --font-sans: var(--font-geist-sans);
   --font-mono: var(--font-geist-mono);
+  --color-primary: #dc143c;
+  --color-primary-hover: #77071e;
 }
 
 @media (prefers-color-scheme: dark) {
@@ -23,4 +25,11 @@ body {
   background: var(--background);
   color: var(--foreground);
   font-family: Arial, Helvetica, sans-serif;
+}
+
+@keyframes rotation {
+  to { transform: rotate(360deg); }
+}
+@keyframes rotationBack {
+  to { transform: rotate(-360deg); }
 }
